--- a/src/contacts.html
+++ b/src/contacts.html
@@ -13,7 +13,8 @@
       @@include('html/footer.html',{})
     </div>
     @@include('html/elements/pop-up.html',{})
-    @@include('html/elements/pop-up2.html',{})
+    
+    <!-- @@include('html/popUp.html', {}) -->
     <script src="js/app.min.js"></script>
   </body>
 </html>
