--- a/src/html/elements/pop-up.html
+++ b/src/html/elements/pop-up.html
@@ -17,7 +17,7 @@
             </label>
             <label class="popup__last-name" for="">
               <p>Last name</p>
-              <input type="text" name="last-name" />
+              <input type="text" name="last-name"required class="_req" />
             </label>
             <label class="popup__phone" for="">
               <p>Phone</p>
