--- a/src/html/elements/preloader.html
+++ b/src/html/elements/preloader.html
@@ -1,6 +1,7 @@
+
 <div class="preloader">
-  <div class="preloader__content">
-    <div class="preloader__standing-element">HI</div>
-    <div class="preloader__variable-element space" id="variable-element"></div>
+  <div class="preloader__container">
+      <div class="preloader__title">HI</div>
+      <div class="preloader__load"><span id="percents">0</span>%</div>
   </div>
 </div>
