--- a/src/html/elements/pop-up.html
+++ b/src/html/elements/pop-up.html
@@ -42,19 +42,17 @@
               >
                 <option class="popup__select-option" value=""></option>
                 <option class="popup__select-option" value="Type 1">
-                  Type 1
+                  Dark
                 </option>
                 <option class="popup__select-option" value="Type 2">
-                  Type 2
-                </option>
-                <option class="popup__select-option" value="Type 3">
-                  Type 3
+                  White
                 </option>
               </select>
             </label>
             <label class="popup__user-comment" for="">
               <p>Your comment</p>
-              <textarea type="text" name="user-comment"></textarea>
+              
+              <input type="text" name="user-comment"></input>
             </label>
           </div>
         </div>
@@ -187,6 +185,7 @@
               </div>
             </div>
             <!--<a href="#popup2">-->
+
             <input
               type="submit"
               value="Send Request"
@@ -194,6 +193,7 @@
               id="btn"
               href="#popup2"
             />
+
             <!--</input>-->
             <!--</a>-->
           </div>
