--- a/src/news.html
+++ b/src/news.html
@@ -46,7 +46,7 @@
             </div>
             <div class="second-news-section__singlebox blog card">
               <div class="second-news-section__content">
-                <a href="one-news" class="second-news-section__title">
+                <a href="404.html" class="second-news-section__title">
                   Non-standard plinth options
                 </a>
               </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="second-news-section__singlebox blog card">
               <div class="second-news-section__content">
-                <a href="one-news" class="second-news-section__title">
+                <a href="404.html" class="second-news-section__title">
                   Interior design, LCD Rybalsky
                 </a>
               </div>
