--- a/src/one-projects.html
+++ b/src/one-projects.html
@@ -18,13 +18,19 @@
               ante felis, aliquam eu enim sed, ornare pretium velit.
             </div>
             <div class="first-project-section__data">
-              <div class="first-project-section__location icon-geotag">
+              <div class="first-project-section__location ">
+                <!-- <div class="map"> -->
+                <img src="img/one-project/map (1).svg">
                 Lodz, Poland
               </div>
-              <div class="first-project-section__date icon-calc">
+              
+              <div class="first-project-section__date ">
+                <img src="img/one-project/calendar.svg">
                 16.10.2018
               </div>
-              <div class="first-project-section__area icon-size">80 sq.m</div>
+              <div class="first-project-section__area ">
+                <img src="img/one-project/area.svg">
+                80 sq.m</div>
             </div>
           </div>
           <div class="first-project-section__share-box">
