--- a/src/html/elements/pop-up2.html
+++ b/src/html/elements/pop-up2.html
@@ -2,6 +2,7 @@
   <div class="popup2__body">
     <div class="popup2__content close-area">
       <!--<div class="popup2__box">-->
+
       <h4 class="popup2__title">Thank you for your message!</h4>
       <div class="popup2__text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
@@ -11,8 +12,18 @@
       <a href="#popup" class="popup2__button button popup-link">
         <div class="button__text">Send again</div>
       </a>
+
       <!--</div>-->
     </div>
   </div>
   <div class="popup2__criss-cross icon-criss-cross close-popup"></div>
 </div>
+
+
+<!-- <div class="modal">
+  <div class="modal__wrapper">
+      <div class="modal__title">Thank you for your message!</div>
+      <div class="modal__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu mauris vitae posuere. Ut at luctus ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.</div>
+      <button class="modal__btn">Send again</button>
+  </div>
+</div> -->
