--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
 
   <body>
     @@include('html/elements/preloader.html',{})
+   
     <div class="wrapper">
       @@include('html/header.html',{})
+      <!-- @@include('html/sidemenu.html', {}) -->
       <main>
         <div class="first-section">
           <div class="first-section__swiper swiper">
