--- a/src/html/elements/data-box.html
+++ b/src/html/elements/data-box.html
@@ -2,7 +2,7 @@
   @@include('box-language.html',{"class": "data-box__language-box"})
   <div class="data-box__location">
     
-    <div class="sidemenu__select">
+    <!-- <div class="sidemenu__select">
       <div style="display: flex;
       align-items: center;">
           <div class="data-box__flag icon-geotag"></div>
@@ -13,7 +13,7 @@
           <div class="sidemenu__option-item sidemenu__option-item__active" data-location="Berlin">Berlin</div>
           <div class="sidemenu__option-item" data-location="Hamburg">Hamburg</div>
       </div>
-  </div>
+  </div> -->
     <!-- <nav class="menu-list">
       <ul>
         <li>
@@ -30,12 +30,13 @@
         </li>
       </ul>
     </nav> -->
-    <!-- <select class="data-box__city-list">
+    <div class="data-box__flag icon-geotag"></div>
+    <select class="data-box__city-list">
       <option class="data-box__city-name">Berlin</option>
       <option class="data-box__city-name">London</option>
       <option class="data-box__city-name">Paris</option>
       <option class="data-box__city-name">Brussels</option>
-    </select> -->
+    </select>
   </div>
   <div class="data-box__contacts">
     <div class="data-box__phone">
