--- a/src/about.html
+++ b/src/about.html
@@ -40,9 +40,9 @@
                   ></div>
 
                   <!-- If we need scrollbar -->
-                  <div
+                  <!-- <div
                     class="second-about-section__swiper-scrollbar swiper-scrollbar"
-                  ></div>
+                  ></div> -->
                   <div
                     class="second-about-section__swiper-button-next swiper-button-next"
                   ></div>
